--- a/overview/overview_pipe.yml
+++ b/overview/overview_pipe.yml
@@ -8,7 +8,7 @@ variables:
   resourceGroupName: 'levs-resources'
   location: 'westeurope'
   templateFile: 'main.bicep'
-  paramFile: 'main.bicepparam'
+  paramFile: 'mai0n.bicepparam'
 
 pool:
   vmImage: 'ubuntu-latest'
